# eyelinkio

./: .buildinfo  .gitattributes  .gitignore  API.html  LICENSE  MANIFEST.in  README.md  README.rst  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  roadmap.html  search.html  searchindex.js  setup.py  usage.html  whats_new.html
.circleci/: config.yml
.github/: release.yaml
.github/workflows/: lint.yaml  publish-test.yaml  publish.yaml  test.yaml  tests.yaml
_sources/: API.rst.txt  contributing.rst.txt  index.rst.txt  usage.rst.txt
_static/: documentation_options.js
changes/: devel.html
docs/: API.rst  conf.py  contributing.rst  index.rst  roadmap.rst  usage.rst  whats_new.rst
docs/_static/css/: custom.css
docs/changes/: devel.rst
docs/changes/devel/: 11.bugfix.rst  14.newfeature.rst  5.newfeature.rst  6.newfeature.rst
eyelinkio/: __init__.py
eyelinkio/edf/: _edf2py.py  read.py  read_edf.py
eyelinkio/io/: __init__.py
eyelinkio/io/edf/: __init__.py  read_edf.py
eyelinkio/io/tests/: test_edf.py
eyelinkio/tests/: test_edf.py
eyelinkio/utils/: __init__.py  check.py  utils.py
pyeyelink/: __init__.py  _baseraw.py  utils.py
pyeyelink/io/: __init__.py
pyeyelink/io/edf/: _edf2py.py  _raw.py  read_edf.py
pyeyelink/io/tests/: test_edf.py
pyeyelink/utils/: check.py
src/eyelinkio/: __init__.py
src/eyelinkio/edf/: __init__.py  _defines.py  _edf2py.py  read.py
src/eyelinkio/tests/: test_edf.py
src/eyelinkio/utils/: __init__.py  check.py  utils.py
src/libedf2asc/: CMakeLists.txt  Makefile.linux  main.c  opt.h  printevent.c  printrecordinginfo.c  printsample.c
src/libedf2asc/include/: edf.h  edf_data.h  edftypes.h
src/libedfapi/macos/edfapi.framework/: edfapi
src/libedfapi/macos/edfapi.framework/Resources/: Info.plist
src/libedfapi/windows/win32/: edfapi.lib
src/libedfapi/windows/win64/: edfapi64.lib  zlibwapi.lib
